<resources>
  <string name="app_name">GiTinder</string>
  <string name="dialog_title">Login with Github</string>
  <string name="dialog_message">In order to use GiTinder you need to login using your Github Account.
    Click Login if you want to proceed.</string>
  <string name="dialog_button_exit">Exit</string>
  <string name="dialog_button_login">Login</string>
  <string name="button_like">LIKE</string>
  <string name="button_nope">NOPE</string>
  <string name="swiping_tab_title">Swiping</string>
  <string name="matches_tab_title">Matches</string>
  <string name="settings_tab_title">Settings</string>
  <string name="button_message">Messages</string>
  <string name="button_profile">Profile</string>
  <string name="settings_notifications">Enable Notifications</string>
  <string name="settings_notifications_on">Notifications On</string>
  <string name="settings_notifications_off">Notifications Off</string>
  <string name="settings_background_sync">Enable Background Sync</string>
  <string name="settings_background_sync_on">Background Sync On</string>
  <string name="settings_background_sync_off">Background Sync Off</string>
  <string name="settings_distance">Maximum distance</string>
  <string name="settings_languages">Preferred languages</string>
  <string name="action_settings">Action Settings</string>
  <string name="settings_example_languages">Javascript, Java, Ruby</string>
  <string name="match_dialog_title">It\'s a match!</string>
  <string name="match_dialog_message">You can start chatting with your partner, or you can keep swiping.</string>
  <string name="button_back">Keep Swiping</string>
  <string name="button_chat">Start Chatting</string>
  <string name="no_more_profiles">No more profiles available :(</string>
  <string name="no_connection_message">Internet not available, check your internet connectivity and try again</string>
  <string name="no_connection_title">Info</string>
  <string name="new_match">You have a new match!</string>
  <string name="notification_message">Touch to view</string>
</resources>
