<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:gravity="center_horizontal"
  android:orientation="vertical">

  <de.hdodenhof.circleimageview.CircleImageView
    android:id="@+id/profile_pic"
    android:layout_width="170dp"
    android:layout_height="170dp"
    android:layout_marginTop="32dp"
    android:layout_marginBottom="32dp"
    android:src="@drawable/selfie" />
  <Switch
    android:id="@+id/switch_notifications"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    android:layout_marginStart="32dp"
    android:layout_marginEnd="32dp"
    android:text="@string/settings_notifications"
    android:textIsSelectable="false"
    android:textSize="18sp" />
  <Switch
    android:id="@+id/switch_sync"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    android:layout_marginStart="32dp"
    android:layout_marginEnd="32dp"
    android:text="@string/settings_background_sync"
    android:textSize="18sp" />
  <TextView
    android:id="@+id/distance_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="32dp"
    android:layout_marginEnd="32dp"
    android:layout_marginBottom="8dp"
    android:text="@string/settings_distance"
    android:textSize="18sp" />
  <SeekBar
    android:id="@+id/seekBar_distance"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="32dp"
    android:layout_marginEnd="32dp"
    android:max="100"
    android:layout_marginBottom="16dp" />
  <TextView
    android:id="@+id/languages_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="32dp"
    android:layout_marginEnd="32dp"
    android:layout_marginBottom="8dp"
    android:text="@string/settings_languages"
    android:textSize="18sp" />
  <TextView
    android:id="@+id/languages_list"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="32dp"
    android:layout_marginEnd="32dp"
    android:layout_marginBottom="16dp"
    android:text="@string/settings_example_languages"
    android:textColor="@color/settings_languages"
    android:textSize="14sp" />
</LinearLayout>
