<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:orientation="vertical" android:layout_width="match_parent"
  android:layout_height="match_parent">

  <TextView
    android:id="@+id/distance_view"
    android:layout_width="0dp"
    android:layout_height="21dp"
    android:layout_marginTop="16dp"
    android:layout_marginLeft="32dp"
    android:layout_marginRight="32dp"
    android:text="@string/settings_distance"
    android:textSize="18sp"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/switch_syn" />
  <TextView
    android:id="@+id/languages_view"
    android:layout_width="315dp"
    android:layout_height="22dp"
    android:layout_marginTop="16dp"
    android:layout_marginLeft="32dp"
    android:layout_marginRight="32dp"
    android:text="@string/settings_languages"
    android:textSize="18sp"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/seekBar_distance" />
  <SeekBar
    android:id="@+id/seekBar_distance"
    android:layout_width="0dp"
    android:layout_height="18dp"
    app:layout_constraintRight_toRightOf="parent"
    android:layout_marginRight="32dp"
    android:layout_marginTop="8dp"
    app:layout_constraintTop_toBottomOf="@+id/distance_view"
    android:layout_marginLeft="32dp"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintHorizontal_bias="0.0" />
  <Switch
    android:id="@+id/switch_notifications"
    android:layout_width="0dp"
    android:layout_height="19dp"
    android:layout_marginTop="32dp"
    android:layout_marginLeft="32dp"
    android:layout_marginRight="32dp"
    android:text="@string/settings_notifications"
    android:textIsSelectable="false"
    android:textSize="18sp"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/imageView3" />
  <Switch
    android:id="@+id/switch_syn"
    android:layout_width="0dp"
    android:layout_height="26dp"
    android:layout_marginTop="16dp"
    android:layout_marginLeft="32dp"
    android:layout_marginRight="32dp"
    android:text="@string/settings_background_sync"
    android:textSize="18sp"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/switch_notifications" />
  <de.hdodenhof.circleimageview.CircleImageView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/imageView3"
    android:layout_width="178dp"
    android:layout_height="162dp"
    android:layout_centerHorizontal="true"
    android:src="@drawable/sloth"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:layout_marginTop="32dp"
    android:layout_marginLeft="0dp"
    android:layout_marginRight="0dp" />
  <TextView
    android:id="@+id/languages_list"
    android:layout_width="0dp"
    android:layout_height="17dp"
    android:layout_marginTop="8dp"
    android:layout_marginLeft="32dp"
    android:layout_marginRight="32dp"
    android:text="Javascript, Java, Ruby"
    android:textColor="@color/settings_languages"
    android:textSize="14sp"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/languages_view" />
</android.support.constraint.ConstraintLayout>