<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/swiping_fragment"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:weightSum="1"
              tools:context="com.greenfox.opal.gitinder.MainActivity">

  <android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="10dp">

  </android.support.constraint.ConstraintLayout>

  <android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_weight="0.84">

    <TextView
      android:id="@+id/noMoreProfiles"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="8dp"
      android:layout_marginEnd="8dp"
      android:layout_marginLeft="8dp"
      android:layout_marginRight="8dp"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
      android:text="@string/no_more_profiles"
      android:textSize="24dp"
      android:visibility="invisible"
      app:layout_constraintBottom_toBottomOf="@+id/swipeView"
      app:layout_constraintLeft_toLeftOf="@+id/swipeView"
      app:layout_constraintRight_toRightOf="@+id/swipeView"
      app:layout_constraintTop_toTopOf="@+id/swipeView"/>

    <Button
      android:id="@+id/button_nope"
      style="?android:attr/borderlessButtonStyle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginLeft="79dp"
      android:layout_marginStart="79dp"
      android:text="@string/button_nope"
      android:textColor="#ff4500"
      app:layout_constraintBaseline_toBaselineOf="@+id/button_like"
      app:layout_constraintLeft_toLeftOf="parent"
      tools:layout_constraintLeft_creator="1"/>

    <Button
      android:id="@+id/button_like"
      style="?android:attr/borderlessButtonStyle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="16dp"
      android:layout_marginEnd="80dp"
      android:layout_marginRight="80dp"
      android:layout_marginTop="16dp"
      android:text="@string/button_like"
      android:textColor="#ff0000"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/swipeView"/>

    <com.lorentzos.flingswipe.SwipeFlingAdapterView
      android:id="@+id/swipeView"
      android:layout_width="0dp"
      android:layout_height="391dp"
      android:layout_marginBottom="26dp"
      android:background="@color/textviewColor"
      android:elevation="1dp"
      app:layout_constraintBottom_toTopOf="@+id/button_nope"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.0"
      app:rotation_degrees="15.5"
      tools:context=".MainActivity"/>

  </android.support.constraint.ConstraintLayout>

</LinearLayout>
